Fixed: - restore tasks, service sometimes kill itself -if order was with the alarm and cancelling has failed, it not be deleted from the task list -new order alarm logic -keys for assistTradeApi can be changed from the profile screen -trade message -check order crash -autostart set the Assist frequency -widget bottom border
Added:
- new icon for executed alarms
- child text size
- fuse against accidental trade
- additional buttons for trade activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name="com.btc_e_assist.App"
         android:allowBackup="true"
-        android:icon="@drawable/launcher_icon"
+        android:icon="@drawable/ic_launcher_icon"
         android:label="@string/app_name"
         android:theme="@style/BaseCustomTheme" >
         <activity
